tests/baselines/reference/parserTryStatement1.d.errors.txt
==== tests/cases/compiler/parserTryStatement1.d.ts (1 errors) ====
    try {
    ~~~
!!! parserTryStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
    }
    catch (e) {
    }